[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-env"
version = "1.0.0"
description = "OpenEnv-compatible SRE incident response environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "python-dotenv==1.0.1",
  "openai>=1.0.0",
  "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "sre_incident_env"]
